=== 2.3.5.1 / 2009-12-23

* 2 major enhancements

  * Add Array#first and Array#last limit functionality to
    ActiveRecord::Base.first and ActiveRecord::Base.last; optimize LIMIT SQL
    for "first" and "last" in association collections and named scopes.

  * Let label helpers accept blocks.