@@ -14,6 +14,19 @@ Reinforcing the Rails with assorted patches.
     <% end %>
 
 
+* HTML5 form helpers.
+
+    <% form_tag "user_search" do %>
+      <%= search_field_tag "user_search", nil, :autosave => true %>
+    <% end %>
+
+    <% form_for @user do |f| %>
+      <%= f.email_field :email %>
+      <%= f.url_field :homepage %>
+      <%= f.phone_field :phone %>
+    <% end %>
+
+
 === ReactiveRecord
 
 * <tt>Array#first</tt> and <tt>Array#last</tt> functionality and
