@@ -1,1 +1,2 @@
 require "reaction_view/block_labels"
+require "reaction_view/html5_forms"
